Mon Jul  1 21:11:23 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2953

Sat Jun 29 22:50:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac (AC_PROG_LIBTOOL): Remove.

Sat Jun 29 21:34:50 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/configure.ac (AC_PROG_LIBTOOL): Add.

Sat Jun 29 17:53:35 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Jun 29 17:49:43 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2952

Sat Jun  1 13:58:16 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sat Jun  1 13:53:35 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2949

Sun May 26 13:51:36 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk: Merged from upstream-trunk.

Sun May 26 13:48:33 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* upstream-trunk: Sync'd with
	http://elftoolchain.svn.sourceforge.net/svnroot/elftoolchain/trunk@r2946

Wed May 15 00:01:49 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/libdwarf_init.c (_dwarf_producer_deinit): Fix
	memory leak.
	* current-trunk/libdwarf/libdwarf_reloc.c (_dwarf_reloc_cleanup):
	Likewise.
	* current-trunk/libdwarf/libdwarf_die.c (_dwarf_die_pro_cleanup):
	Likewise.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/428

Sun May 12 20:34:28 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	* current-trunk/libdwarf/dwarf_pro_lineno.c (dwarf_add_line_entry):
	code_offset is not an offset compared to last dwarf_lne_set_address.
	Sent patch upstream as:
	http://sourceforge.net/apps/trac/elftoolchain/ticket/427
