@@ -1,3 +1,7 @@
+Mon Jul  1 21:13:36 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Mon Jul  1 21:11:23 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
